Avoid wrapping in tables to promote vertical compactness

--- a/client/style.scss
+++ b/client/style.scss
@@ -58,6 +58,10 @@
 		margin: -6px 0;
 	}
 
+	.woocommerce-table__item {
+		white-space: nowrap;
+	}
+
 	.info-button {
 		width: 40px;
 		padding-right: 0;
