--- a/client/transactions/style.scss
+++ b/client/transactions/style.scss
@@ -2,8 +2,4 @@
 	.date-time {
 		min-width: 195px;
 	}
-
-	.deposit {
-		white-space: nowrap;
-	}
 }
